# zuul-project-config

./: .ansible-lint  .gitignore  README.md  setup.cfg  setup.py  tox.ini
containers/: Dockerfile.f33
doc/: requirements.txt
doc/source/: conf.py  index.rst  jobs.rst  project-templates.rst
nodepool/: clouds.yaml.j2  nodepool.yaml.j2  secure.yaml.j2
nodepool/elements/: README.rst
playbooks/: delete_vault_auth.yaml  get_vault_auth.yaml
playbooks/base/: cleanup.yaml  post-logs.yaml  post.yaml  pre.yaml
playbooks/docs/: fetch.yaml  pre.yaml  promote.yaml  run.yaml
playbooks/functest/: post.yaml  pre.yaml
playbooks/image/: post.yaml
playbooks/otc/: functest-post.yaml  functest-pre.yaml
playbooks/pti-ansible-collection-tarball/: pre.yaml  run.yaml
playbooks/pti-goreleaser/: pre.yaml  run.yaml
playbooks/pti-python-tarball/: post.yaml
playbooks/publish/: ansible-collection.yaml  docs.yaml  failover.yaml  fetch-zuul-artifact.yaml  pypi.yaml  releasenotes.yaml  upload-to-swift.yaml
playbooks/refstack-client/: post.yaml  pre.yaml  run.yaml
playbooks/releasenotes/: fetch.yaml
playbooks/zuul/: bootstrap_zuul_db.yaml  bootstrap_zuul_ui.yaml  deploy_zuul_conf.yaml  hooks.yaml
tools/: copy-zuul-to-quay.sh  run-bashate.sh  zuul-projects-checks.py
zuul/: main.yaml.j2  vhost_zuul.conf  zuul.conf.j2
zuul.d/: container-jobs.yaml  functest-jobs.yaml  jobs.yaml  nodesets.yaml  pipelines.yaml  project-templates.yaml  projects.yaml  refstack-jobs.yaml  secrets.yaml
zuul/static/: builds.html  jobs.html  main.97620dbaa42d3994a215.js  status.html  stream.html  (+6 more)
(+16 files in other folders)
